# boom

./: .gitignore  README.md  _config.yml
crunch/beeb/: crunch.ssd  decompress.6502  list.txt  main.6502  titlescreen.txt
crunch/src/: CMakeLists.txt  arena.c  arena.h  array.template.h  bitreader.c  bitreader.h  bitwriter.c  bitwriter.h  byte_array.c  byte_array.h  file.c  file.h  lz.c  lz.h  main.c  refs.c  refs.h  token.c  token.h  utils.c  utils.h
crunch/src/test/: test.c  test.h
richcrunch/beeb/: decompress.6502  huffman_decompress.6502  lz_decompress.6502  main.6502  make.sh
richcrunch/beeb/huffman/: decompress_huffman.6502  huffman.ssd  huffman.txt  main_huffman.6502  make.sh
richcrunch/beeb/lz/: decompress_lz.6502  lz.ssd  lz.txt  main_lz.6502  make.sh
richcrunch/src/: CMakeLists.txt  arena.c  arena.h  array.template.h  bitreader.c  bitreader.h  bitwriter.c  bitwriter.h  byte_array.h  file.c  huffman.c  huffman.h  lz.c  lz.h  lzhuff.c  lzhuff.h  main.c  refs.c  sort.template.h  token.h  uint16_array.h  uint8_array.h  utils.h
richcrunch/src/test/: CMakeLists.txt  test.c  test.h  test_0.txt
src/: boot.6502  buildcode.6502  buildtables.6502  capture.6502  defines.6502  demomap.6502  doom.6502  doom.ssd  drawline2.6502  entry.6502  gradient.6502  indexeddata.6502  irq.6502  linesprites.6502  linesprites2.6502  list.txt  main.6502  make.sh  map.6502  mulsin.6502  screen.6502  timerbars.6502
src/unused/: applyperspective.6502  buildcolours.6502  calcworldnormalquadrant.6502  clippeddistance.6502  distancealongray.6502  drawline4.6502  getworldangle.6502
